[wheel]
universal = 1

[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE

[flake8]
max-line-length = 100
ignore = E203,W503,W504,E231

[tool:pytest]
testpaths = tests/ src/

[mypy-pytest]
ignore_missing_imports = True

[mypy-aiofiles]
ignore_missing_imports = True

[mypy-boto3]
ignore_missing_imports = True
